src/test/ui/feature-gate-fundamental.stderr
error[E0658]: the `#[fundamental]` attribute is an experimental feature (see issue #29635)
  --> $DIR/feature-gate-fundamental.rs:11:1
   |
LL | #[fundamental] //~ ERROR the `#[fundamental]` attribute is an experimental feature
   | ^^^^^^^^^^^^^^
   |
   = help: add #![feature(fundamental)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
